--- a/-demo/index.html
+++ b/-demo/index.html
@@ -4,8 +4,12 @@
 	<meta charset="utf-8" />
 	<title>ut demo</title>
 	<link rel="stylesheet" href="../undertale.css" />
+	<link rel="stylesheet" href="style.css" />
+	<script src="../undertale.js"></script>
+	<script src="script.js"></script>
 </head>
 <body class="ut-wrapper">
+	<!-- todo demos of hachicro, crypt, and title basic -->
 	<article class="ut-menu">
 		<header class="ut-title-parent">
 			<h1 class="ut-title" data-text="undeRtale css test" data-hearts="under">undeRtale css test</h1>
@@ -16,11 +20,12 @@
 				<p>This is some text</p>
 				<p class="ut-dialogue">This is some text, except more spaced out</p>
 				<p><a class="ut-stats ut-link" href="#">This is a link</a></p>
-				<p><a class="ut-button ut-link" href="#">This is a button link</a></p>
+				<p><a class="ut-button ut-link ut-action" href="#">This is a button link</a></p>
 			</section>
 			<section>
 				<h2 class="ut-stats ut-heading">Test heading 2</h2>
-				<p class="ut-button">This is ut-button without an a tag or ut-link</p>
+				<p><span class="ut-button">This is ut-button without an a tag, ut-link, or ut-action</span></p>
+				<p><span class="ut-button-small">This is ut-button-small without at a tag, ut-link, or ut-action</span></p>
 				<p class="ut-link">This is ut-link without an a tag</p>
 				<p class="ut-orange">To get the above effect without the hover thing, use ut-orange</p>
 				<p class="ut-yellow">To get the above effect with the hover thing on permanently, use ut-yellow</p>
@@ -35,8 +40,8 @@
 			<section>
 				<h2 class="ut-stats ut-heading">Stuff this is missing</h2>
 				<ul>
+					<li>The font used by monsters in combat dialogue is premium and must be paid for by each user. As this would create a webpage style difference in otherwise fuly-compatible browsers, I have elected to not include it.</li>
 					<li>The font used by "HP" on the battle screen</li>
-					<li>The actual font on the FIGHT/ACT/ITEM/MERCY buttons</li>
 					<li><span class="ut-dialogue ut-chara">Chocolate</span></li>
 				</ul>
 			</section>
@@ -44,6 +49,12 @@
 		<hr />
 		<footer>
 			<p class="ut-stats">CHARA&nbsp;&nbsp;&nbsp;LV 19&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HP&nbsp;&nbsp;&nbsp;&nbsp;92 / 92</p>
+			<ol class="inline-list" style="list-style-type:none;">
+				<li><a id="fight" href="#">FIGHT</a></li>
+				<li><a id="act" href="#">ACT</a></li>
+				<li><a id="item" href="#">ITEM</a></li>
+				<li><a id="mercy" href="#">MECRY</a></li>
+			</ol>
 		</footer>
 	</article>
 </body>
