Added support for sprite preset buttons

--- a/-demo/index.html
+++ b/-demo/index.html
@@ -48,10 +48,10 @@
 		</main>
 		<hr />
 		<footer>
-			<p class="ut-stats">CHARA&nbsp;&nbsp;&nbsp;LV 19&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HP&nbsp;&nbsp;&nbsp;&nbsp;92 / 92</p>
+			<p class="ut-stats">KLOWBI&nbsp;&nbsp;&nbsp;LV 1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HP&nbsp;&nbsp;&nbsp;&nbsp;20 / 20</p>
 			<ol class="inline-list" style="list-style-type:none;">
 				<li><a id="fight" href="#">FIGHT</a></li>
-				<li><a id="act" href="#">ACT</a></li>
+				<li><a id="save" href="#">SAVE</a></li>
 				<li><a id="item" href="#">ITEM</a></li>
 				<li><a id="mercy" href="#">MECRY</a></li>
 			</ol>
