Updated demo, font bugfixes

--- a/-demo/index.html
+++ b/-demo/index.html
@@ -9,7 +9,6 @@
 	<script src="script.js"></script>
 </head>
 <body class="ut-wrapper">
-	<!-- todo demos of hachicro, crypt, and title basic -->
 	<article class="ut-menu">
 		<header class="ut-title-parent">
 			<h1 class="ut-title" data-text="undeRtale css test" data-hearts="under">undeRtale css test</h1>
@@ -34,8 +33,11 @@
 				<p>The current spacing is using ut-menu</p>
 				<p class="ut-dialogue">To get the more spaced out text, use ut-dialogue</p>
 				<p class="ut-stats">To get this font by itself, use ut-stats</p>
+				<p class="ut-stats-full">To get this font by itself (a slightly more filled-in version of the above), use ut-stats-full</p>
 				<p class="ut-action">To get this font by itself, use ut-action</p>
-				<p>The title class, ut-title (and ut-title-parent on the container div) are using a font specially designed to be use at their current size, and thus no generic "this font only" class exists</p>
+				<p class="ut-damage">To get this font by itself, use ut-damage (999999)</p>
+				<p class="ut-title-basic-back">To get the title background font by itself, use ut-title-basic-back</p>
+				<p class="ut-title-basic-fore">To get the title foreground font by itself, use ut-title-basic-fore</p>
 			</section>
 			<section>
 				<h2 class="ut-stats ut-heading">Stuff this is missing</h2>
