--- a/documentation/css/fonts/mnc/index.html
+++ b/documentation/css/fonts/mnc/index.html
@@ -13,13 +13,42 @@
 		</header>
 		<main>
 			<section>
-				<p class="ut-x">[NAME]</p>
-				<p>[BRIEF DESC]</p>
-				<nav class="ut-stats">
-					<ul>
-						<li><a class="ut-link" href="x">x</a></li>
-					</ul>
-				</nav>
+				<h2 class="ut-heading ut-stats">MNC/Crypt of Tomorrow</h2>
+				<p>MNC and Crypt of Tomorrow are the fonts used for the name of the player in battles.</p>
+				<p class="ut-stats">MNC looks like this.</p>
+				<p class="ut-stats-full">Crypt of Tomorrow looks like this.</p>
+				<p>The following glyphs have non-standard rendering under MNC:</p>
+				<table>
+					<tr class="ut-stats">
+						<th>Glyph</th>
+						<th>Render</th>
+					</tr>
+					<tr>
+						<td>*</td>
+						<td class="ut-stats">*</td>
+					</tr>
+<!--
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+-->
+				</table>
+				<p>To use this font in "font-family" declarations, use "MNC" or "Crypt of Tomorrow", respectively.</p>
+				<p>Reccomended fallback fonts are as follows:</p>
+				<ul>
+					<li>Crypt of Tomorrow (for MNC)</li>
+					<li>MNC (for Crypt of Tomorrow)</li>
+					<li>Broadway</li>
+					<li>Arial Black</li>
+					<li>Arial</li>
+					<li>sans-serif</li>
+				</ul>
+				<p>The following classes make use of this font as their default:</p>
+				<ul>
+					<li><a class="ut-link" href="../../classes/stats">ut-stats</a> (MNC)</li>
+					<li><a class="ut-link" href="../../classes/stats_dull">ut-stats-full</a> (Crypt of Tomorrow)</li>
+				</ul>
 			</section>
 		</main>
 	</article>
