Added font credits, class docs <= title, some CSS cleanup

--- a/documentation/css/classes/action/index.html
+++ b/documentation/css/classes/action/index.html
@@ -12,19 +12,18 @@
 			<h1 class="ut-title" data-text="dOcumentation - class" data-hearts="d_">dOcumentation - class</h1>
 		</header>
 		<section>
-			<h2 class="ut-heading">[class]</h2>
-			<p>[class] represents [thing]. It is used [where in ut].</p>
-			<p class="[class]">It looks like this.</p>
+			<h2 class="ut-heading">ut-action</h2>
+			<p>ut-action represents the font from the action buttons during fights (FIGHT, ACT, ITEM, MERCY).</p>
+			<p class="ut-action">It looks like this.</p>
 			<p>The CSS is as follows:</p>
 			<p>
 				<code>
-					[lines]
+					.ut-action {<br />
+					&nbsp;&nbsp;color:white;<br />
+					&nbsp;&nbsp;font-family:<a class="ut-link" href="../../fonts/mercy">Mercy</a>,"<a class="ut-link" href="../../fonts/dt">Determination Sans</a>","<a class="ut-link" href="../../fonts/dt">Determination Mono</a>","8-bit Operator","FixedSys","Terminal Vector",Arial,sans-serif;<br />
+					}
 				</code>
 			</p>
-			<p>This class makes use of the following fonts:</p>
-			<ul>
-				<li><a class="ut-link" href="../../fonts/x">x</a></p>
-			</ul>
 		</section>
 	</article>
 </body>
