--- a/documentation/css/classes/chara/index.html
+++ b/documentation/css/classes/chara/index.html
@@ -12,19 +12,18 @@
 			<h1 class="ut-title" data-text="dOcumentation - class" data-hearts="d_">dOcumentation - class</h1>
 		</header>
 		<section>
-			<h2 class="ut-heading">[class]</h2>
-			<p>[class] represents [thing]. It is used [where in ut].</p>
-			<p class="[class]">It looks like this.</p>
+			<h2 class="ut-heading">ut-chara</h2>
+			<p>ut-chara represents flavor text explicitly said by Genocide!Chara. It is used heavily in New Home during a Genocide run.</p>
+			<p class="ut-chara">It looks like this.</p>
+			<p class="ut-chara ut-dialogue">It should typically be used in conjunction with <a class="ut-link" href="../dialogue">ut-dialogue</a>.</p>
 			<p>The CSS is as follows:</p>
 			<p>
 				<code>
-					[lines]
+					.ut-chara {<br />
+					&nbsp;&nbsp;color:red;<br />
+					}
 				</code>
 			</p>
-			<p>This class makes use of the following fonts:</p>
-			<ul>
-				<li><a class="ut-link" href="../../fonts/x">x</a></p>
-			</ul>
 		</section>
 	</article>
 </body>
