--- a/documentation/css/classes/damage/index.html
+++ b/documentation/css/classes/damage/index.html
@@ -12,19 +12,19 @@
 			<h1 class="ut-title" data-text="dOcumentation - class" data-hearts="d_">dOcumentation - class</h1>
 		</header>
 		<section>
-			<h2 class="ut-heading">[class]</h2>
-			<p>[class] represents [thing]. It is used [where in ut].</p>
-			<p class="[class]">It looks like this.</p>
+			<h2 class="ut-heading">ut-damage</h2>
+			<p>ut-damage represents the text shown when a monster takes damage.</p>
+			<p class="ut-damage">It looks like this (123456789).</p>
+			<p class="ut-chara ut-damage ut-heading">It should typically be used in conjunction with <a class="ut-link" href="../chara">ut-chara</a> and <a class="ut-link" href="../heading">ut-heading</a> (123456789).</p>
 			<p>The CSS is as follows:</p>
 			<p>
 				<code>
-					[lines]
+					.ut-damage {<br />
+					&nbsp;&nbsp;color:white;<br />
+					&nbsp;&nbsp;font-family:<a class="ut-link" href="../../fonts/hachicro">Hachicro</a>,"OCR A Extended","OCR A","Goudy Stout",Impact,Arial,sans-serif;<br />
+					}
 				</code>
 			</p>
-			<p>This class makes use of the following fonts:</p>
-			<ul>
-				<li><a class="ut-link" href="../../fonts/x">x</a></p>
-			</ul>
 		</section>
 	</article>
 </body>
