--- a/documentation/css/classes/dialogue/index.html
+++ b/documentation/css/classes/dialogue/index.html
@@ -12,19 +12,19 @@
 			<h1 class="ut-title" data-text="dOcumentation - class" data-hearts="d_">dOcumentation - class</h1>
 		</header>
 		<section>
-			<h2 class="ut-heading">[class]</h2>
-			<p>[class] represents [thing]. It is used [where in ut].</p>
-			<p class="[class]">It looks like this.</p>
+			<h2 class="ut-heading">ut-dialogue</h2>
+			<p>ut-dialogue represents dialogue said by characters who do not have their own specific font outside of fights, as well as the object inspection text.</p>
+			<p class="ut-dialogue">It looks like this.</p>
 			<p>The CSS is as follows:</p>
 			<p>
 				<code>
-					[lines]
+					.ut-dialogue {<br />
+					&nbsp;&nbsp;color:white;<br />
+					&nbsp;&nbsp;font-family:"<a class="ut-link" href="../../fonts/dt">Determination Mono</a>","<a class="ut-link" href="../../fonts/dt">Determination Sans</a>","8-bit Operator","FixedSys","Terminal Vector","Courier New",monospace;<br />
+					&nbsp;&nbsp;font-size:1em;<br />
+					}
 				</code>
 			</p>
-			<p>This class makes use of the following fonts:</p>
-			<ul>
-				<li><a class="ut-link" href="../../fonts/x">x</a></p>
-			</ul>
 		</section>
 	</article>
 </body>
