--- a/documentation/css/classes/heading/index.html
+++ b/documentation/css/classes/heading/index.html
@@ -12,19 +12,17 @@
 			<h1 class="ut-title" data-text="dOcumentation - class" data-hearts="d_">dOcumentation - class</h1>
 		</header>
 		<section>
-			<h2 class="ut-heading">[class]</h2>
-			<p>[class] represents [thing]. It is used [where in ut].</p>
-			<p class="[class]">It looks like this.</p>
+			<h2 class="ut-heading">ut-heading</h2>
+			<p>ut-heading does not represent anything from Undertale - rather, it is a way to make text 1.5x larger, overriding size definitions in other classes.</p>
+			<p class="ut-heading">It looks like this.</p>
 			<p>The CSS is as follows:</p>
 			<p>
 				<code>
-					[lines]
+					.ut-heading {<br />
+					&nbsp;&nbsp;font-size:1.5em;<br />
+					}
 				</code>
 			</p>
-			<p>This class makes use of the following fonts:</p>
-			<ul>
-				<li><a class="ut-link" href="../../fonts/x">x</a></p>
-			</ul>
 		</section>
 	</article>
 </body>
