--- a/documentation/css/classes/menu/index.html
+++ b/documentation/css/classes/menu/index.html
@@ -12,19 +12,19 @@
 			<h1 class="ut-title" data-text="dOcumentation - class" data-hearts="d_">dOcumentation - class</h1>
 		</header>
 		<section>
-			<h2 class="ut-heading">[class]</h2>
-			<p>[class] represents [thing]. It is used [where in ut].</p>
-			<p class="[class]">It looks like this.</p>
+			<h2 class="ut-heading">ut-menu</h2>
+			<p>ut-menu represents text in menu screens, such as the [C] menu, player inventory/boxes, and sub-option selectors in battles.</p>
+			<p class="ut-menu">It looks like this (unchanged from most of the font on this page because it is also using ut-menu).</p>
 			<p>The CSS is as follows:</p>
 			<p>
 				<code>
-					[lines]
+					.ut-menu {<br />
+					&nbsp;&nbsp;color:white;<br />
+					&nbsp;&nbsp;font-family:"<a class="ut-link" href="../../fonts/dt">Determination Mono</a>","<a class="ut-link" href="../../fonts/x">Determination Sans</a>","8-bit Operator","FixedSys","Terminal Vector","Courier New",monospace;<br />
+					&nbsp;&nbsp;font-size:1em;<br />
+					}
 				</code>
 			</p>
-			<p>This class makes use of the following fonts:</p>
-			<ul>
-				<li><a class="ut-link" href="../../fonts/x">x</a></p>
-			</ul>
 		</section>
 	</article>
 </body>
