--- a/documentation/css/classes/orange/index.html
+++ b/documentation/css/classes/orange/index.html
@@ -12,19 +12,17 @@
 			<h1 class="ut-title" data-text="dOcumentation - class" data-hearts="d_">dOcumentation - class</h1>
 		</header>
 		<section>
-			<h2 class="ut-heading">[class]</h2>
-			<p>[class] represents [thing]. It is used [where in ut].</p>
-			<p class="[class]">It looks like this.</p>
+			<h2 class="ut-heading">ut-orange</h2>
+			<p>ut-orange represents text that should be the same color as the non-active fight actions (FIGHT, ACT, ITEM, MERCY).</p>
+			<p class="ut-orange">It looks like this.</p>
 			<p>The CSS is as follows:</p>
 			<p>
 				<code>
-					[lines]
+					.ut-orange {<br />
+					&nbsp;&nbsp;color:#f68228;<br />
+					}
 				</code>
 			</p>
-			<p>This class makes use of the following fonts:</p>
-			<ul>
-				<li><a class="ut-link" href="../../fonts/x">x</a></p>
-			</ul>
 		</section>
 	</article>
 </body>
