--- a/documentation/css/classes/stats/index.html
+++ b/documentation/css/classes/stats/index.html
@@ -12,19 +12,19 @@
 			<h1 class="ut-title" data-text="dOcumentation - class" data-hearts="d_">dOcumentation - class</h1>
 		</header>
 		<section>
-			<h2 class="ut-heading">[class]</h2>
-			<p>[class] represents [thing]. It is used [where in ut].</p>
-			<p class="[class]">It looks like this.</p>
+			<h2 class="ut-heading">ut-stats</h2>
+			<p>ut-stats represents things like the player's name and LV in battles.</p>
+			<p class="ut-stats">It looks like this.</p>
 			<p>The CSS is as follows:</p>
 			<p>
 				<code>
-					[lines]
+					.ut-stats {<br />
+					&nbsp;&nbsp;color:white;<br />
+					&nbsp;&nbsp;font-size:0.8em;<br />
+					&nbsp;&nbsp;font-family:<a class="ut-link" href="../../fonts/mnc">MNC</a>,"<a class="ut-link" href="../../fonts/mnc">Crypt of Tomorrow</a>",Broadway,"Arial Black",Arial,sans-serif;<br />
+					}
 				</code>
 			</p>
-			<p>This class makes use of the following fonts:</p>
-			<ul>
-				<li><a class="ut-link" href="../../fonts/x">x</a></p>
-			</ul>
 		</section>
 	</article>
 </body>
